--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "start": "node src/cli.js",
+    "gui": "electron gui/main.cjs",
+    "gui-dev": "NODE_ENV=development electron gui/main.cjs",
     "test": "node test/test.js",
     "benchmark": "node test/benchmark.js"
   },
@@ -26,16 +28,18 @@
   "author": "ConvertWemp Team",
   "license": "MIT",
   "dependencies": {
-    "sharp": "^0.34.3",
-    "p-map": "^7.0.2",
-    "fs-extra": "^11.2.0",
-    "commander": "^12.0.0",
     "chalk": "^5.3.0",
+    "commander": "^12.0.0",
+    "fs-extra": "^11.2.0",
     "ora": "^8.0.1",
-    "progress": "^2.0.3"
+    "p-map": "^7.0.2",
+    "progress": "^2.0.3",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "electron": "^37.2.5",
+    "electron-builder": "^26.0.12",
     "typescript": "^5.3.0"
   },
   "repository": {
@@ -46,4 +50,4 @@
     "url": "https://github.com/username/convertwemp/issues"
   },
   "homepage": "https://github.com/username/convertwemp#readme"
-} 
+}
